@@ -20,6 +20,8 @@ TODO: comment about improvement of twoway FE transformation (Yves)
     overall/outer plm model, fitted_exp.plm gives the fitted values (by subtracting
     the overall residuals from the untransformed response variable).
   * pwartest.formula (only formula interface): fixed: ellipsis (dots) were not passed on.
+  * pwartest, pwfdtest: statistics are labelled as F statistics,
+                        calculations now done without car::linearHypthesis().
 
 
 Changes since version 1.6-5
